// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requests /auth/register should register and send welcome email 1`] = `
Object {
  "body": Object {
    "token": "test-redacted",
    "user": Object {
      "name": "Eddie Van Halen",
      "pid": "test-redacted",
      "username": "evh@example.com",
    },
  },
  "headers": Object {
    "connection": "close",
    "content-length": "360",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 200,
}
`;

exports[`requests /auth/register should register and send welcome email 2`] = `
Object {
  "name": "Eddie Van Halen",
  "pid": "test-redacted",
  "username": "evh@example.com",
}
`;

exports[`requests /auth/register should register and send welcome email 3`] = `
Array [
  Object {
    "content": undefined,
    "contentType": "multipart/alternative",
    "contents": Array [
      undefined,
      "Welcome Eddie Van Halen, you can now log in.
  Verify your account with the link below:

  http://localhost/test-redacted
",
      ";<html>

<body>
  You can{' '}
  <a href=\\"http://localhost:/test-redacted\\">
    verify your account
  </a>
</body>

</html>
",
    ],
    "envelope": Object {
      "from": "no-reply@elle-postage.example.com",
      "to": Array [
        "evh@example.com",
      ],
    },
    "from": "no-reply@elle-postage.example.com",
    "messageId": "test-redacted",
    "originalMessage": Object {
      "attachments": Array [],
      "from": "Elle Postage <no-reply@elle-postage.example.com>",
      "html": ";<html>

<body>
  You can{' '}
  <a href=\\"http://localhost:/test-redacted\\">
    verify your account
  </a>
</body>

</html>
",
      "subject": "Welcome Eddie Van Halen",
      "text": "Welcome Eddie Van Halen, you can now log in.
  Verify your account with the link below:

  http://localhost/test-redacted
",
      "to": "evh@example.com",
    },
    "response": "test-redacted",
    "subject": "Welcome Eddie Van Halen",
    "to": Array [
      "evh@example.com",
    ],
  },
]
`;

exports[`requests /auth/register should validate 1`] = `
Object {
  "body": Object {
    "error": "validation",
    "validationErrors": Array [
      Object {
        "code": "invalid_type",
        "expected": "string",
        "message": "Required",
        "path": Array [
          "name",
        ],
        "received": "undefined",
      },
    ],
  },
  "headers": Object {
    "connection": "close",
    "content-length": "147",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 400,
}
`;

exports[`requests /auth/register should validate 2`] = `
Object {
  "body": Object {
    "error": "validation",
    "validationErrors": Array [
      Object {
        "code": "invalid_string",
        "message": "Invalid email",
        "path": Array [
          "username",
        ],
        "validation": "email",
      },
    ],
  },
  "headers": Object {
    "connection": "close",
    "content-length": "136",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 400,
}
`;

exports[`requests /auth/register should validate 3`] = `
Object {
  "body": Object {
    "error": "validation",
    "validationErrors": Array [
      Object {
        "code": "too_small",
        "inclusive": true,
        "message": "String must contain at least 5 character(s)",
        "minimum": 5,
        "path": Array [
          "password",
        ],
        "type": "string",
      },
    ],
  },
  "headers": Object {
    "connection": "close",
    "content-length": "185",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 400,
}
`;

exports[`requests /auth/register should validate 4`] = `
Object {
  "body": Object {
    "error": "user exists",
  },
  "headers": Object {
    "connection": "close",
    "content-length": "23",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 400,
}
`;

exports[`requests /auth/register should verify with secret token 1`] = `
Object {
  "body": Object {
    "ok": true,
  },
  "headers": Object {
    "connection": "close",
    "content-length": "11",
    "content-security-policy": "default-src 'self';base-uri 'self';block-all-mixed-content;font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests",
    "content-type": "application/json; charset=utf-8",
    "cross-origin-embedder-policy": "require-corp",
    "cross-origin-opener-policy": "same-origin",
    "cross-origin-resource-policy": "same-origin",
    "expect-ct": "max-age=0",
    "origin-agent-cluster": "?1",
    "referrer-policy": "no-referrer",
    "strict-transport-security": "max-age=15552000; includeSubDomains",
    "vary": "Accept-Encoding",
    "x-content-type-options": "nosniff",
    "x-dns-prefetch-control": "off",
    "x-download-options": "noopen",
    "x-frame-options": "SAMEORIGIN",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
  },
  "status": 200,
}
`;

exports[`requests /auth/register should verify with secret token 2`] = `Array []`;
